<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!--e停的车辆信息-->

    <include layout="@layout/top_view" />


    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/bg_color" />

    <LinearLayout
        android:id="@+id/car_model_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/pop_car"
            android:textColor="@color/color_333b46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:hint="@string/choice_cars"
            android:singleLine="true"
            android:textColor="@color/color_333b46"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_more_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View style="@style/dividerlineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/authorization_phone"
            android:textColor="@color/color_333b46"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ed_authorize_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/input_authorization_phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/color_333b46"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/dividerlineStyle" />

    <Button
        android:id="@+id/btn_authorization"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_openticket_default"
        android:text="@string/authorization"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>