<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="60dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="5dp"
    card_view:cardMaxElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">


            <ImageView
                android:id="@+id/iv_car_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/eparking_img_carmodel" />

            <TextView
                android:id="@+id/tv_car_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_toRightOf="@id/iv_car_logo"
                android:text="@string/switch_new_energy"
                android:textColor="@color/color_333b46"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_eparking_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_car_brand"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/iv_car_logo"
                android:text="@string/switch_normal_car"
                android:textColor="@color/color_333b46"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_car_bindstatus"
                android:layout_width="56dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_bindstatus_model"
                android:gravity="center"
                android:text="@string/monthcard"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:id="@+id/unbind_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:id="@+id/unbind_car_layout"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/apply_authentication"
                android:textColor="@color/color_333b46"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_bind_car"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/car_authentication"
                android:textColor="@color/color_108ee9"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/avoid_others_use"
                android:textColor="@color/color_333b46"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>