<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:elevation="60dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="5dp"
    card_view:cardMaxElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_eparking_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/switch_new_energy"
            android:textColor="@color/color_333b46"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_car_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_eparking_place"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/temporary_stop"
            android:textColor="@color/color_333b46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_apply_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/switch_normal_car"
            android:textColor="@color/color_626b77"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_apply_status"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_stopcar_model"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>


</android.support.v7.widget.CardView>