<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/top_view" />
    <!--紧急开闸输入码-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergnecy_opencode"
            android:textColor="@color/color_333b46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/input_emergnecy_opencode"
            android:singleLine="true"
            android:textColor="@color/color_999faa"
            android:textSize="14sp" />

    </LinearLayout>

    <com.eparking.view.PasswordInputView
        android:id="@+id/pwd_inputview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/btn_once_opencode"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_openticket_default"
        android:text="@string/once_opencode"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>